# comci

./: .gitignore  .gitmodules  Build  NOTES  NOTES.md  README.md  Test  git-ci.cabal  git-ci.go  pyproject.toml  requirements.txt
app/: Main.hs
bbt/exit-nonzero/: badargs.err  badargs.sh
bbt/exit-zero/: log.out  log.sh  noargs.cmd  noargs.out
comci-tests/: 10-test
comci-tests/10-output/: 30-fail..out  40-pass..out
fixture/repo.git/: HEAD  ORIG_HEAD  index  packed-refs
fixture/repo.git/info/: refs
fixture/repo.git/logs/: HEAD
fixture/repo.git/logs/refs/heads/: master
fixture/repo.git/logs/refs/heads/dev/: one
fixture/repo.git/objects/info/: packs
fixture/repo.git/objects/pack/: pack-151267d7680cdf6d76f8d01f2a844a8dd39c0054.idx  pack-151267d7680cdf6d76f8d01f2a844a8dd39c0054.pack
fixture/repo00.git/: description
fixture/repo00.git/objects/info/: packs
src/: Sample.hs  SampleTest.hs  Test.hs
src/GitCI/: Main.hs
src/Test/: Top.hs
src/comci/: git_tscript.pt  git_tscript.py  run.pt  run.py  util.py
t/: 010-usage.bats  020-list.bats  030-run.bats  030-show.bats  040-run.bats  040-show.bats  test-lib.bash
t/fixtures/: pack-fixtures
t/fixtures/repo-config.git/: packed-refs
t/fixtures/repo-config.git/info/: refs
t/fixtures/repo-config.git/objects/info/: packs
t/fixtures/repo-config.git/objects/pack/: pack-47b7125d4bc0e45f880fa29e8b083ba08fe1083e.idx  pack-47b7125d4bc0e45f880fa29e8b083ba08fe1083e.pack  pack-5ea170ed86cd9d346f1ede77bc22c8d4bb62a0ee.idx  pack-5ea170ed86cd9d346f1ede77bc22c8d4bb62a0ee.pack  pack-a938896baca97fa064529a1703ce75b221c3c9c2.idx  pack-a938896baca97fa064529a1703ce75b221c3c9c2.pack  pack-b5771b516d8946e3db0eab17aa3066791d7b2043.idx  pack-b5771b516d8946e3db0eab17aa3066791d7b2043.pack  pack-ea35381f7a1de250186249db1f870bb7b65c12e8.idx  pack-ea35381f7a1de250186249db1f870bb7b65c12e8.pack
t/fixtures/repo-no-config.git/: packed-refs
t/fixtures/repo-no-config.git/info/: refs
t/fixtures/repo-run.git/: packed-refs
t/fixtures/repo-run.git/info/: refs
t/fixtures/repo-run.git/objects/info/: packs
t/fixtures/repo-run.git/objects/pack/: pack-35585d304747b83391a1dd19f44dabd49081fa4e.idx  pack-35585d304747b83391a1dd19f44dabd49081fa4e.pack  pack-b9ad2947541930cc23d87f1fbc6d4eaf9f8c8fae.idx  pack-b9ad2947541930cc23d87f1fbc6d4eaf9f8c8fae.pack  pack-baedaee0f4efc9576570de97b1be59019d8dcbb7.idx  pack-baedaee0f4efc9576570de97b1be59019d8dcbb7.pack
t/fixtures/repo01.git/info/: refs
t/fixtures/repo01.git/objects/info/: packs
t/fixtures/repo01.git/objects/pack/: pack-b3b8073218e354533d9494a098937e62127ae998.idx  pack-b3b8073218e354533d9494a098937e62127ae998.pack
test/fixture/repo00.git/objects/pack/: pack-8aeb96f49ff2b3cef3835b557ee6727db07eee53.idx  pack-8aeb96f49ff2b3cef3835b557ee6727db07eee53.pack
tests/: 010-framework.bats  010-usage.bats
trepo/tscript/: 30-fail  50-fail
ts/: 10-repo
ts/10-output/: 10-pass..err  10-pass..out  60-untracked..err  60-untracked..out
tscript/: 10-repo  functional
tscript/test-repo/tscript/: 20-pass
twtree/: .gitignore
twtree/tscript/: 10-pass  20-non-executable
