name:                git-ci
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/git-ci#readme
--license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable git-ci
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , git-ci
                     , gitlib
                     , gitlib-libgit2
  default-language:    Haskell2010

test-suite git-ci-test
    type:               detailed-0.9
    hs-source-dirs:     src
    test-module:        Test.Top
    default-language:   Haskell2010
    build-depends:      base, Cabal
                   -- , git-ci

source-repository head
  type:     git
  location: https://github.com/githubuser/git-ci
